--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class = "counter">
+    <!-- <div class = "counter">
         <button type="button" data-decrement>Минус</button>
         <span data-field>0</span>
         <button type="button" data-increment>Плюс</button>
@@ -16,7 +16,7 @@
         <button type="button" data-decrement>Минус</button>
         <span data-field>0</span>
         <button type="button" data-increment>Плюс</button>
-    </div>
+    </div> -->
     <script src = "./counter.js"></script>
 </body>
 </html>
